--- a/static/css/emploi.scss
+++ b/static/css/emploi.scss
@@ -274,6 +274,9 @@ main {
         color: var(--Ivory_White);
         background-color: var(--bleu-fonce);
     }
+    .emploi-description-button:active {
+        background-color: var(--noir-bleu);
+    }
 }
 
 #button-mobile-container {
@@ -359,6 +362,9 @@ main {
     
             color: var(--Ivory_White);
             background-color: var(--bleu-fonce);
+        }
+        #button-mobile:active {
+            background-color: var(--noir-bleu);
         }
 
         #button-mobile-share, #button-mobile-mail {
