--- a/static/css/offres.css
+++ b/static/css/offres.css
@@ -113,6 +113,9 @@ header {
   color: white;
   background-color: var(--bleu-fonce);
 }
+.offre-button-container .offre-button:active {
+  background-color: var(--noir-bleu);
+}
 
 .offre-plus-container {
   display: flex;
