contact ajoutée à nav

--- a/templates/about.html
+++ b/templates/about.html
@@ -42,7 +42,7 @@
             <a id="nav_home" data-name="index" class="nav_el" href="/">Accueil</a>
             <a id="nav_services" data-name="offres" class="nav_el" href="/templates/offres.html">Offres d'emplois</a>
             <a id="nav_rdv" data-name="about" class="nav_el" href="/templates/about.html">À propos</a>
-            <a id="nav_contact" data-name="contact" class="nav_el" href="">Contact</a>
+            <a id="nav_contact" data-name="contact" class="nav_el" href="/templates/contact.html">Contact</a>
         </div>
     </nav>
 
